--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,9 +21,9 @@ security:
         info:
             pattern: ^/info
             security: false
-        security:
-            pattern: ^/login
-            security: false
+#        security:
+#            pattern: ^/login
+#            security: false
         main:
             pattern: ^/
             anonymous: false
@@ -34,7 +34,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: '^/admin', roles: ROLE_ADMIN }
+        - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_ADMIN }
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
