--- a/.env
+++ b/.env
@@ -16,9 +16,14 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=5e734d98acd5ca677cae5f6d11921f7e
+APP_VERSION=0.1.0
+APP_NAME=Adclassify
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+TAXONOMY_VERSION=0.1.0
+TAXONOMY_NAME=simple
 
 ###> doctrine/doctrine-bundle ###
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
