--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,8 +16,9 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         api:
-            pattern: ^/api
-            security: false
+            pattern: ^/api/
+            stateless: true
+            wsse: true
         info:
             pattern: ^/info
             security: false
@@ -42,7 +43,11 @@ security:
     access_control:
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/api/, roles: ROLE_CLIENT }
         - { path: ^/, roles: ROLE_USER }
 
-#    role_hierarchy:
-#        ROLE_ADMIN: ROLE_USER
+    role_hierarchy:
+        ROLE_CLIENT: ROLE_USER
+        ROLE_CLASSIFIER: ROLE_USER
+        ROLE_ADMIN: [ROLE_CLIENT, ROLE_CLASSIFIER]
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
