--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
 		"ext-json": "*",
 		"gedmo/doctrine-extensions": "^2.4",
 		"psr/log": "^1.0",
+		"stof/doctrine-extensions-bundle": "^1.3",
 		"symfony/asset": "4.3.*",
 		"symfony/console": "4.3.*",
 		"symfony/dotenv": "4.3.*",
