--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -20,6 +20,10 @@ doctrine:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        filters:
+            soft-deleteable:
+                class: 'Gedmo\SoftDeleteable\Filter\SoftDeleteableFilter'
+                enabled: true
         mappings:
             App:
                 is_bundle: false
@@ -27,3 +31,9 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'Adshares\Adclassify\Entity'
                 alias: App
+            gedmo_loggable:
+                type: annotation
+                prefix: Gedmo\Loggable\Entity
+                dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Loggable/Entity"
+                alias: GedmoLoggable
+                is_bundle: false
