--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,5 +24,9 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    Adshares\Adclassify\Security\Firewall\WsseListener:
+        arguments: ['@security.token_storage', '@security.authentication.manager']
+        public: false
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
