--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,8 +42,9 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin/, roles: ROLE_ADMIN }
         - { path: ^/api/, roles: ROLE_CLIENT }
+        - { path: ^/class/, roles: ROLE_CLASSIFIER }
         - { path: ^/, roles: ROLE_USER }
 
     role_hierarchy:
