--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "bootstrap": "^4.3.1",
         "copy-webpack-plugin": "^5.0.3",
         "jquery": "^3.4.1",
+        "lodash": "^4.17.15",
         "node-sass": "^4.12.0",
         "popper.js": "^1.15.0",
         "sass-loader": "^7.1.0",
