--- a/composer.json
+++ b/composer.json
@@ -23,38 +23,37 @@
 		"gedmo/doctrine-extensions": "^2.4",
 		"psr/log": "^1.0",
 		"stof/doctrine-extensions-bundle": "^1.3",
-		"symfony/asset": "4.3.*",
-		"symfony/console": "4.3.*",
-		"symfony/dotenv": "4.3.*",
-		"symfony/expression-language": "4.3.*",
-		"symfony/flex": "^1.3.1",
-		"symfony/form": "4.3.*",
-		"symfony/framework-bundle": "4.3.*",
-		"symfony/http-client": "4.3.*",
+		"symfony/asset": "^4.3",
+		"symfony/console": "^4.3",
+		"symfony/dotenv": "^4.3",
+		"symfony/expression-language": "^4.3",
+		"symfony/flex": "^1.3",
+		"symfony/form": "^4.3",
+		"symfony/framework-bundle": "^4.3",
+		"symfony/http-client": "^4.3",
 		"symfony/monolog-bundle": "^3.1",
 		"symfony/orm-pack": "^1.0",
-		"symfony/process": "4.3.*",
-		"symfony/security-bundle": "4.3.*",
+		"symfony/process": "^4.3",
+		"symfony/security-bundle": "^4.3",
 		"symfony/serializer-pack": "^1.0",
 		"symfony/swiftmailer-bundle": "^3.1",
-		"symfony/twig-bundle": "4.3.*",
-		"symfony/validator": "4.3.*",
-		"symfony/web-link": "4.3.*",
+		"symfony/twig-bundle": "^4.3",
+		"symfony/validator": "^4.3",
+		"symfony/web-link": "^4.3",
 		"symfony/webpack-encore-bundle": "^1.2",
-		"symfony/yaml": "4.3.*"
+		"symfony/yaml": "^4.3"
 	},
 	"require-dev": {
-		"dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
-		"jakub-onderka/php-parallel-lint": "^1.0",
+		"dealerdirect/phpcodesniffer-composer-installer": "^0.7",
+		"php-parallel-lint/php-parallel-lint": "^1.3",
 		"phpcompatibility/php-compatibility": "^9.1",
-		"sensiolabs/security-checker": "^5.0",
 		"squizlabs/php_codesniffer": "^3.4",
 		"symfony/debug-pack": "^1.0",
 		"symfony/maker-bundle": "^1.0",
 		"symfony/profiler-pack": "^1.0",
 		"symfony/test-pack": "^1.0",
-		"symfony/var-dumper": "4.3.*",
-		"symfony/web-server-bundle": "4.3.*"
+		"symfony/var-dumper": "^4.3",
+		"symfony/web-server-bundle": "^4.3"
 	},
 	"config": {
 		"preferred-install": {
@@ -92,7 +91,6 @@
 			"@auto-scripts"
 		],
 		"qa-check": [
-			"security-checker security:check",
 			"parallel-lint --no-colors --blame --exclude vendor .",
 			"phpcs -s src --standard=PHPCompatibility",
 			"phpcs -s src --standard=PSR2"
