--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # In all environments, the following files are loaded if they exist,
-# the later taking precedence over the former:
+# the latter taking precedence over the former:
 #
 #  * .env                contains default values for the environment variables needed by the app
 #  * .env.local          uncommitted file with local overrides
@@ -15,11 +15,9 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=5e734d98acd5ca677cae5f6d11921f7e
-APP_VERSION=0.1.0
-APP_NAME=Adclassify
-#TRUSTED_PROXIES=127.0.0.1,127.0.0.2
-#TRUSTED_HOSTS='^localhost|example\.com$'
+APP_SECRET=b43261605e039b580c2fc27b8876cbe9
+#TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
+#TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
 
 TAXONOMY_VERSION=0.1.0
