--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.9.0",
-        "@symfony/webpack-encore": "^0.27.0",
+        "@symfony/webpack-encore": "^1.0.0",
         "bootstrap": "^4.3.1",
         "copy-webpack-plugin": "^5.0.3",
+        "core-js": "^3.0.0",
         "jquery": "^3.5.0",
         "lodash": "^4.17.15",
         "node-sass": "^4.12.0",
         "popper.js": "^1.15.0",
         "sass-loader": "^7.1.0",
+        "webpack": "^4.0.0",
         "webpack-notifier": "^1.8.0"
     },
+    "license": "proprietary",
     "private": true,
     "scripts": {
         "dev-server": "encore dev-server",
