--- a/composer.json
+++ b/composer.json
@@ -20,39 +20,37 @@
 		"ext-iconv": "*",
 		"ext-json": "*",
 		"ext-sodium": "*",
-		"gedmo/doctrine-extensions": "^2.4",
+		"gedmo/doctrine-extensions": "^3.1",
 		"psr/log": "^1.1",
 		"stof/doctrine-extensions-bundle": "^1.6",
-		"symfony/asset": "^4.4",
-		"symfony/console": "^4.4",
-		"symfony/dotenv": "^4.4",
-		"symfony/expression-language": "^4.4",
+		"symfony/asset": "^5.3",
+		"symfony/console": "^5.3",
+		"symfony/dotenv": "^5.3",
+		"symfony/expression-language": "^5.3",
 		"symfony/flex": "^1.13",
-		"symfony/form": "^4.4",
-		"symfony/framework-bundle": "^4.4",
-		"symfony/http-client": "^4.4",
+		"symfony/form": "^5.3",
+		"symfony/framework-bundle": "^5.3",
+		"symfony/http-client": "^5.3",
 		"symfony/monolog-bundle": "^3.7",
-		"symfony/orm-pack": "^1.2",
-		"symfony/process": "^4.4",
-		"symfony/security-bundle": "^4.4",
+		"symfony/orm-pack": "^2.1",
+		"symfony/process": "^5.3",
+		"symfony/runtime": "^5.3",
+		"symfony/security-bundle": "^5.3",
 		"symfony/serializer-pack": "^1.0",
 		"symfony/swiftmailer-bundle": "^3.5",
-		"symfony/twig-bundle": "^4.4",
-		"symfony/validator": "^4.4",
-		"symfony/web-link": "^4.4",
+		"symfony/twig-bundle": "^5.3",
+		"symfony/validator": "^5.3",
+		"symfony/web-link": "^5.3",
 		"symfony/webpack-encore-bundle": "^1.12",
-		"symfony/yaml": "^4.4"
+		"symfony/yaml": "^5.3"
 	},
 	"require-dev": {
 		"dealerdirect/phpcodesniffer-composer-installer": "^0.7",
-		"php-parallel-lint/php-parallel-lint": "^1.3",
-		"phpcompatibility/php-compatibility": "^9.3",
 		"squizlabs/php_codesniffer": "^3.6",
 		"symfony/debug-pack": "^1.0",
 		"symfony/maker-bundle": "^1.32",
 		"symfony/profiler-pack": "^1.0",
-		"symfony/test-pack": "^1.0",
-		"symfony/var-dumper": "^4.4"
+		"symfony/var-dumper": "^5.3"
 	},
 	"config": {
 		"preferred-install": {
@@ -102,7 +100,7 @@
 	"extra": {
 		"symfony": {
 			"allow-contrib": false,
-			"require": "4.4.*"
+			"require": "5.3.*"
 		}
 	}
 }
