--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,7 +2,7 @@
 # Files in the packages/ subdirectory configure your dependencies.
 
 # Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
+# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     app.notifications.email_sender: '%env(EMAIL_SENDER)%'
 
@@ -22,11 +22,11 @@ services:
             - '../src/Kernel.php'
             - '../src/Tests/'
 
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-    Adshares\Adclassify\Controller\:
-        resource: '../src/Controller/'
-        tags: ['controller.service_arguments']
+#    # controllers are imported separately to make sure services can be injected
+#    # as action arguments even if you don't extend any base controller class
+#    Adshares\Adclassify\Controller\:
+#        resource: '../src/Controller/'
+#        tags: ['controller.service_arguments']
 
 #    Adshares\Adclassify\Security\Authentication\Provider\WsseProvider:
 #        arguments:
