Quality level taxonomy

--- a/.env
+++ b/.env
@@ -18,6 +18,11 @@ APP_ENV=dev
 APP_SECRET=0b8c5408e09192de3ef1f5c04aeae06b
 ###< symfony/framework-bundle ###
 
+APP_NAME=AdClassify
+APP_VERSION=0.3.1
+APP_HOST=localhost
+APP_PORT=8014
+
 TAXONOMY_VERSION=0.1.0
 TAXONOMY_NAME=simple
 CLASSIFIER_ADS_ACCOUNT=0001-00000000-XXXX
