--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
 		"preferred-install": {
 			"*": "dist"
 		},
-		"sort-packages": true
+		"sort-packages": true,
+		"optimize-autoloader": true
 	},
 	"autoload": {
 		"psr-4": {
