--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.name: '%env(APP_NAME)%'
+    app.version: '%env(APP_VERSION)%'
     app.notifications.email_sender: '%env(EMAIL_SENDER)%'
 
 services:
@@ -11,6 +13,17 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+
+    twig.app_variable:
+        class: Adshares\Adclassify\Twig\AppVariable
+        calls:
+            - setEnvironment: ['%kernel.environment%']
+            - setDebug: ['%kernel.debug%']
+            - setName: ['%app.name%']
+            - setVersion: ['%app.version%']
+            - setTokenStorage: ['@?security.token_storage']
+            - setRequestStack: ['@?request_stack']
+
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
