--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,6 +15,9 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        user:
+            pattern: ^/api/v\d+/users$
+            security: false
         api:
             pattern: ^/api/
             stateless: true
