--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,13 @@
 		"ext-iconv": "*",
 		"ext-json": "*",
 		"ext-sodium": "*",
+		"composer/package-versions-deprecated": "^1.11",
+		"doctrine/annotations": "^1.0",
+		"doctrine/doctrine-bundle": "^2.4",
+		"doctrine/doctrine-migrations-bundle": "^3.1",
+		"doctrine/orm": "^2.9",
 		"gedmo/doctrine-extensions": "^3.1",
+		"phpdocumentor/reflection-docblock": "^5.2",
 		"psr/log": "^1.1",
 		"stof/doctrine-extensions-bundle": "^1.6",
 		"symfony/asset": "^5.3",
@@ -32,11 +38,13 @@
 		"symfony/framework-bundle": "^5.3",
 		"symfony/http-client": "^5.3",
 		"symfony/monolog-bundle": "^3.7",
-		"symfony/orm-pack": "^2.1",
 		"symfony/process": "^5.3",
+		"symfony/property-access": "5.3.*",
+		"symfony/property-info": "5.3.*",
+		"symfony/proxy-manager-bridge": "5.3.*",
 		"symfony/runtime": "^5.3",
 		"symfony/security-bundle": "^5.3",
-		"symfony/serializer-pack": "^1.0",
+		"symfony/serializer": "5.3.*",
 		"symfony/swiftmailer-bundle": "^3.5",
 		"symfony/twig-bundle": "^5.3",
 		"symfony/validator": "^5.3",
@@ -45,12 +53,14 @@
 		"symfony/yaml": "^5.3"
 	},
 	"require-dev": {
-		"dealerdirect/phpcodesniffer-composer-installer": "^0.7",
+		"dealerdirect/phpcodesniffer-composer-installer": "^1.0",
+		"php-parallel-lint/php-parallel-lint": "^1.4",
 		"squizlabs/php_codesniffer": "^3.6",
-		"symfony/debug-pack": "^1.0",
+		"symfony/debug-bundle": "5.3.*",
 		"symfony/maker-bundle": "^1.32",
-		"symfony/profiler-pack": "^1.0",
-		"symfony/var-dumper": "^5.3"
+		"symfony/stopwatch": "5.3.*",
+		"symfony/var-dumper": "^5.3",
+		"symfony/web-profiler-bundle": "5.3.*"
 	},
 	"config": {
 		"preferred-install": {
@@ -95,9 +105,9 @@
 			"@auto-scripts"
 		],
 		"qa-check": [
-			"parallel-lint --no-colors --blame --exclude vendor .",
-			"phpcs -s src --standard=PHPCompatibility",
-			"phpcs -s src --standard=PSR2"
+			"php bin/console lint:yaml config",
+			"parallel-lint --no-colors --blame --exclude vendor --exclude bin  .",
+			"phpcs -s config src --standard=PSR12"
 		],
 		"dev": "/bin/bash -c '(source .env && if [ -f \".env.local\" ]; then source .env.local; fi && php -t ./public -S ${APP_HOST}:${APP_PORT})'"
 	},
